--- a/src/components/pages/downloadpage/downloadpage.css
+++ b/src/components/pages/downloadpage/downloadpage.css
@@ -126,3 +126,17 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+
+.color {
+    background-color: #31363f;
+}
+.modal-div {
+    clip-path: polygon(
+        0 22px,
+        22px 0,
+        100% 0,
+        100% calc(100% - 22px),
+        calc(100% - 22px) 100%,
+        0 100%
+    );
+}
