--- a/src/components/pages/main/main.css
+++ b/src/components/pages/main/main.css
@@ -85,3 +85,32 @@ section {
         transform: rotateY(360deg);
     }
 }
+.flip-container {
+    perspective: 1000px;
+}
+
+.flipper {
+    transition: 0.6s;
+    transform-style: preserve-3d;
+    position: relative;
+    width: 500px;
+    height: 500px;
+}
+
+.flip {
+    transform: rotateY(180deg);
+}
+
+.front,
+.back {
+    backface-visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.back {
+    transform: rotateY(180deg);
+}
